--- a/frontend-app/package.json
+++ b/frontend-app/package.json
@@ -58,7 +58,8 @@
     "eslint-plugin-react-refresh": "^0.4.3",
     "happy-dom": "^12.1.6",
     "postcss": "^8.4.21",
-    "prettier": "2.8.2",
+    "prettier": "^2.8.2",
+    "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.2.4",
     "typescript": "^5.0.2",
     "vite": "^4.4.8",
