feat: add front-end modals create contents & see contents, integrate api

--- a/frontend-app/tsconfig.json
+++ b/frontend-app/tsconfig.json
@@ -23,7 +23,8 @@
     "paths": {
       "app/*": ["src/app/*"],
       "components/*": ["src/components/*"],
-      "store/*": ["src/store/*"]
+      "store/*": ["src/store/*"],
+      "services/*": ["src/services/*"]
     }
   },
   "include": ["src"],
