--- a/frontend-app/package.json
+++ b/frontend-app/package.json
@@ -33,6 +33,7 @@
     "formik": "^2.4.6",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-player": "^2.16.0",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
@@ -59,7 +60,6 @@
     "happy-dom": "^12.1.6",
     "postcss": "^8.4.21",
     "prettier": "^2.8.2",
-    "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.2.4",
     "typescript": "^5.0.2",
     "vite": "^4.4.8",
